--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "central-command-unit/external/mosquitto"]
 	path = central-command-unit/external/mosquitto
 	url = https://github.com/eclipse-mosquitto/mosquitto.git
+[submodule "central-command-unit/external/cJSON"]
+	path = central-command-unit/external/cJSON
+	url = https://github.com/DaveGamble/cJSON.git
