- Uploaded config update ( env model + generate model base entities folder) - Uplaoded typeorm persistance entities following the first model - Uploaded first routes ( Get, Create and Update)  + controller +  requests for vehicle entity Nb : Routes are waiting for some function to be fully available
Note : Please check package files because of a version change for express and highlight (added on this version)

--- a/supervision/backend/.env.model
+++ b/supervision/backend/.env.model
@@ -12,6 +12,6 @@ MYSQL_HOST="localhost"
 MYSQL_USER="admin"
 MYSQL_PORT="3306"
 MYSQL_PASSWORD="password"
-MYSQL_DATABASE="MoniCars"
+MYSQL_DATABASE="supervision"
 MYSQL_CHARSET="utf8mb4"
 # 
