--- a/supervision/backend/package.json
+++ b/supervision/backend/package.json
@@ -22,7 +22,8 @@
     "cors": "^2.8.5",
     "diff": "^7.0.0",
     "dotenv": "^17.2.0",
-    "express": "^4.19.2",
+    "express": "^4.21.2",
+    "highlight": "^0.2.4",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "multer": "^2.0.2",
@@ -41,6 +42,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^2.0.0",
     "@types/node": "^22.1.0",
+    "highlight.js": "^11.11.1",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
