fix: Erreur de compilation - Linkage de la libcore avec les executable des service - Deplacement de CJSON_PRINT pour être réutilisé dans les fichier de modèle de donnée.

--- a/central-command-unit/Makefile
+++ b/central-command-unit/Makefile
@@ -91,7 +91,7 @@ $(TARGET_LIBSO): $(OBJ_CORE)
 services: external-libs $(SERVICES:%=$(BIN_DIR)/%)
 
 # Edition de liens des services avec les objets correspondants
-$(BIN_DIR)/%: $$(OBJ_%) $(TARGET_LIBSO)
+$(BIN_DIR)/%: $$(OBJ_%)
 	@mkdir -p $(BIN_DIR)
 	@$(CC) $^ -o $@ $(LDFLAGS) $(PROJECT_LIBS) $(LIBS) 
 	@echo "LD Service $@"
