feat(config): Récupération de la config voiture

--- a/central-command-unit/config_model/vehicle.ini
+++ b/central-command-unit/config_model/vehicle.ini
@@ -18,3 +18,9 @@ log_topic = system/alerts
 [Service]
 ; L'identifiant unique du véhicule dans le système
 vehicle_id = 1
+; Configuration UART pour la communication avec le véhicule
+uart_baudrate = 115200
+; Chemin du périphérique UART
+uart_device_path = /dev/ttyS0
+; Timeout en millisecondes pour les opérations UART
+uart_timeout_ms = 1000
