--- a/central-command-unit/config_model/vehicle.ini
+++ b/central-command-unit/config_model/vehicle.ini
@@ -5,7 +5,7 @@ mqtt_broker_ip = 127.0.0.1
 ; Port du serveur MQTT
 mqtt_broker_port = 1883
 ; Nom du service MQTT
-mqtt_client_id = Heartbeat
+mqtt_client_id = Vehicle
 ; Timeout en secondes pour les connexions MQTT
 mqtt_timeout_sec = 5
 
@@ -19,8 +19,8 @@ log_topic = system/alerts
 ; L'identifiant unique du véhicule dans le système
 vehicle_id = 1
 ; Configuration UART pour la communication avec le véhicule
-uart_baudrate = 115200
+uart_baudrate = 9600
 ; Chemin du périphérique UART
-uart_device_path = /dev/ttyS0
+uart_device_path = /dev/ttyACM0
 ; Timeout en millisecondes pour les opérations UART
-uart_timeout_ms = 1000
+uart_timeout_ms = -1
