fix(marvelmind): Changement de logique pour le marvelmind - Ajout du port de marvelmind dans la configuration du vehicule - Ajout d'un simulateur pour le marvelmind - Fix protocol uart qui envoyé en double le startbyte

--- a/central-command-unit/config_model/vehicle.ini
+++ b/central-command-unit/config_model/vehicle.ini
@@ -21,6 +21,8 @@ vehicle_id = 1
 ; Configuration UART pour la communication avec le véhicule
 uart_baudrate = 9600
 ; Chemin du périphérique UART
-uart_device_path = /dev/ttyACM0
+uart_device_path = /dev/serial0
+; Port série pour Marvelmind
+uart_marvelmind_port = /dev/ttyFAKE_C
 ; Timeout en millisecondes pour les opérations UART
 uart_timeout_ms = -1
