feat(integration_camera): Intégration camera IA

--- a/central-command-unit/config_model/vehicle.ini
+++ b/central-command-unit/config_model/vehicle.ini
@@ -23,6 +23,10 @@ uart_baudrate = 9600
 ; Chemin du périphérique UART
 uart_device_path = /dev/serial0
 ; Port série pour Marvelmind
-uart_marvelmind_port = /dev/ttyFAKE_C
+uart_marvelmind_port = /dev/ttyAMA0
 ; Timeout en millisecondes pour les opérations UART
 uart_timeout_ms = -1
+; Configuration du port d'écoute pour la socket
+camera_socket_port = 500
+; Adresse IP de liaison pour la socket
+camera_socket_bind_ip = 127.0.0.1
